# misp-gateway

./: .pre-commit-config.yaml  README.md  pyproject.toml
.github/workflows/: test.yml
misp_gateway/: forwarder.py  main.py
misp_gateway/api/v1/: api.py  dependencies.py
misp_gateway/api/v1/endpoints/: attributes.py  catcher.py  events.py
misp_gateway/core/: settings.py
misp_gateway/transformers/: __init__.py  attribute.py  event.py
misp_gateway/views/: __init__.py
recipes/reject_cisco_top20k/: README.md  main.py
recipes/shodan_internet_db/: README.md  main.py
tests/: conftest.py  test_app.py  test_version.py
tests/api/v1/: test_dependencies.py
