[tool.poetry]
name = "misp-gateway"
version = "0.1.0"
description = ""
authors = ["Manabu Niseki <manabu.niseki@gmail.com>"]

[tool.poetry.dependencies]
python = "^3.8"
fastapi = "^0.78.0"
gunicorn = "^20.1.0"
loguru = "^0.6.0"
uvicorn = "^0.17.6"
pymisp = "^2.4.159"
httpx = "^0.23.0"

[tool.poetry.dev-dependencies]
autoflake = "^1.4"
autopep8 = "^1.6.0"
black = "^22.3.0"
coveralls = "^3.3.1"
flake8 = "^4.0.1"
isort = "^5.10.1"
mypy = "^0.950"
pre-commit = "^2.19.0"
pytest = "^6.2.5"
pytest-asyncio = "^0.16.0"
pytest-cov = "^3.0.0"
pytest-parallel = "^0.1.1"
pytest-randomly = "^3.12.0"
pytest-sugar = "^0.9.4"
pyupgrade = "^2.32.1"
requests = "^2.27.1"
vcrpy = "^4.1.1"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
